Rolo 013 (2017-08-18)

* Do not install the (inexistent) file rfc2426.txt

* Minor tweaks in configure.ac

Rolo 012 (2017-02-18)

* The sources now are maintained at GitHub
(https://github.com/libvc/rolo)

* Rafael Laboissiere is the new aintainer.

* Added support for displaying UTF-8 encoded entries.

* Does not create the default contacts file (~/.rolo/contacts.vcf) when
  option -f is used.

* Display multiple addresses present in the entries.

* Display the value of "TYPE" attributes.

* Fix some bugs yielding segmentation faults.

* Display unlimited number of NOTE fields.

Rolo 011 (2003-05-20)

* Searching is now fixed and the results are appearing properly on
the screen.  Searches are now performed case-insensitive.

* Added ability to search forwards or backwards for the next match.

* There is now a dependency on libvc if you want to perform your
own build of rolo.  You can download libvc from the rolo web site
(see the README file for the web address).

* The mutt_vc_query utility is no longer distributed with rolo.  It
is now a separate package.  You can download mutt_vc_query from the
rolo web site (see the README file for the web address).

Rolo 010 (2003-05-04)

* Added a new utility for mutt's `query_command' called `mutt_vc_query'.
This utility will allow a mutt user to query the email addresses
in `contacts.vcf' with the `Q' command in mutt.  See the README
file for how to implement.

Rolo 009 (2003-04-26)

* Preferred telephone number and email addresses are now displayed
in the index screen (but only if the parameter is specified exactly
as TYPE=pref).  A cleaner way of parsing out the parameter values
is in the works.

* Added a few more `convenience functions' to the vcard API.

* Help screen has been updated.

* Man page has been updated with the mdoc template format as specified
in mdoc(7).

Rolo 008 (2003-04-20)

* Revamped the entire libvcard with a brand-spanking-new API.  Now