@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ## $Id: Makefile.am,v 1.9 2003/05/14 10:03:31 ahsu Exp $
 
-SUBDIRS = src doc
+SUBDIRS = src doc test
 AUTOMAKE_OPTIONS = check-news dist-bzip2
 EXTRA_DIST = depcomp test/contacts.vcf rolo.spec
