@@ -1,0 +1,6 @@
+all:
+	@if [ "$(HAS_SHUNIT2)" = yes ] ; then	\
+	    ./run-tests ; 			\
+	else					\
+	    echo "Unit tests skipped" ; 	\
+	fi
